--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img src="images/Shrikaant.png" alt="profile-pic">
           <h3>Hello.</h3>
-          <p>I am an android and web developer, I love to code and design.</p>
+          <p class="intro">I am an android and web developer, I love to code and design.</p>
         </div>
         <hr>
         <div class="skills">
@@ -40,7 +40,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3>If you love our website?.</h3>
-          <p>Love to have similar kind of interface, contact us adn we will be glad to assist you.</p>
+          <p class="contact-message">Love to have similar kind of interface, contact us and we will be glad to assist you.</p>
           <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
           
              </div>
